last school submit

--- a/Forum/forumIndex.html
+++ b/Forum/forumIndex.html
@@ -1,9 +1,17 @@
 <html>
     <head>
-
+        title
     </head>
     <body>
         pull from js database to load catagories
         When catagory clicked user will be brought to threads page
+        use js to create new element with reference to a cirtain layout
+
+        later feature
+        catagories can be searched for
+
+        <body name = "catagory display box">
+            
+        </body>
     </body>
 </html>
