--- a/index.html
+++ b/index.html
@@ -1,3 +1,19 @@
 <html>
-#will be used as testing ground for now
+<body>
+    <header>
+        <!--<link rel="stylesheet" href="index.css">--style at bottom is temprorary> -->
+    </header>
+    <center>
+        
+        <h3>www.2plateproductions.com</h3>
+        <img src="" alt="TwoPlateProductions please give me the logo">
+        <h3>by Luca, Gabriel and Kyan</h3>
+    </center>
+    <br>
+</body>
+<style>
+    center{
+        background-color: red;
+    }
+</style>
 </html>
