--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         
         <h3>www.2plateproductions.com</h3>
         <img src="" alt="TwoPlateProductions please give me the logo">
-        <h3>by Lucanon, Gabriel and Kyan</h3>
+        <h3>by Lucanonanon, Gabriel and Kyan</h3>
     </center>
     <br>
 </body>
