--- a/Forum/forumIndex.html
+++ b/Forum/forumIndex.html
@@ -2,7 +2,7 @@
     <head>
         title
     </head>
-    <body>
+    <body style="font-size: 30px">
         pull from js database to load catagories
         When catagory clicked user will be brought to threads page
         use js to create new element with reference to a cirtain layout
