gallary copy paste, link page at start, front header logo thing for forum that we need to get the images to actually make it look like something

--- a/Forum/forumIndex.html
+++ b/Forum/forumIndex.html
@@ -1,8 +1,14 @@
 <html>
     <head>
-        title
+        <link rel="stylesheet" href="ForumStyle.css">
     </head>
-    <body style="font-size: 30px">
+    <body>
+        <center>
+            <h3>www.2plateproductions.com</h3>
+            <img src="" alt="TwoPlateProductions please give me the logo">
+            <h3>by Lucanonanonanon, Gabriel and Kyan</h3>
+        </center>
+        <hr>
         pull from js database to load catagories
         When catagory clicked user will be brought to threads page
         use js to create new element with reference to a cirtain layout
