--- a/index.html
+++ b/index.html
@@ -4,16 +4,43 @@
         <!--<link rel="stylesheet" href="index.css">--style at bottom is temprorary> -->
     </header>
     <center>
-        
         <h3>www.2plateproductions.com</h3>
         <img src="" alt="TwoPlateProductions please give me the logo">
         <h3>by Lucanonanonanon, Gabriel and Kyan</h3>
     </center>
-    <br>
+    <hr>
+    <center>
+        <table>
+            <th>
+                <th>
+                    <ul>
+                        <a href="About/about.html"><li>About</li></a>
+                        <br>
+                        <a href="Gallary/galaryIndex.html"><li>Gallery</li></a>
+                    </ul> 
+                </th>
+            </th>
+            <th>
+                <img src="" alt="image please tell gabriel to add images to the drive">  
+            </th>
+            <th>
+                <ul>
+                    <a href="Forum/forumIndex.html"><li>Forum</li></a>
+                    <br>
+                    <a href="youtube.com"><li>symmetry</li></a>
+                </ul> 
+            </th>
+        </table>
+        
+    </center>
 </body>
 <style>
     center{
         background-color: red;
+    }
+    ul {
+        list-style: none;
+        padding: 0;
     }
 </style>
 </html>
