--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <html>
 <body>
     <header>
-        <!--<link rel="stylesheet" href="index.css">--style at bottom is temprorary> -->
+        <link rel="stylesheet" href="index.css">
     </header>
     <center>
         <h3>www.2plateproductions.com</h3>
-        <img src="" alt="TwoPlateProductions please give me the logo">
-        <h3>by Lucanonanonanon, Gabriel and Kyan</h3>
+        <img src="IndexImages/1Two Plate Productions Logo.png" alt="logo">
+        <h3>by Luca the arched fingertips, Gabriel and Kyan</h3>
     </center>
-    <hr>
+    <hr color="green">
     <center>
         <table>
             <th>
@@ -21,7 +21,7 @@
                 </th>
             </th>
             <th>
-                <img src="" alt="image please tell gabriel to add images to the drive">  
+                    <img src="IndexImages/archedhuman.png" alt="image please tell gabriel to add images to the drive">
             </th>
             <th>
                 <ul>
@@ -34,13 +34,4 @@
         
     </center>
 </body>
-<style>
-    center{
-        background-color: red;
-    }
-    ul {
-        list-style: none;
-        padding: 0;
-    }
-</style>
 </html>
