partialy added user system

--- a/Forum/loginpage.html
+++ b/Forum/loginpage.html
@@ -1,5 +1,5 @@
 <html>
     <body>
-        
+        //instead of loging in they will provide username and password to post message on message post form
     </body>
 </html>
