stuff the sequel

--- a/about/about.html
+++ b/about/about.html
@@ -1,14 +1,16 @@
 <html>
-    <head>
-        <link rel="stylesheet" href="GalaryStyle.css">
+<body>
+    <header>
+        <link rel="stylesheet" href="about.css">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    </head>
-    <body>
-        <center>
+    </header>
+    <center>
             <h3>www.2plateproductions.com</h3>
             <img src="IndexImages/1Two Plate Productions Logo.png" alt="2plateproductions">
             <h3>by Luca the arched fingertips, Gabriel and Kyan</h3>
     </center>
+
+    <hr color="737373">
     <center>
         <table>
             <th>
@@ -16,7 +18,7 @@
                     <ul>
                         <a href="About/about.html"><li>About</li></a>
                         <br>
-                        <a href="../IndexImages/"><li>Gallery</li></a>
+                        <a href="Gallary/galaryIndex.html"><li>Gallery</li></a>
                     </ul> 
                 </th>
             </th>
@@ -34,16 +36,8 @@
             </th>
         </table>
     </center>
-        <hr>
-        <div class="luca">
-            <ul>
-                <li><div id="HairStrand1"><img src="../IndexImages/playing laser tag sim.png" alt="maggot"></div></li>
-                <li><div class="caption">I AM IN THE COMEDY REALM</div></li>
-                <li><div id="HairStrand1"><img src="../IndexImages/playing laser tag sim.png" alt="maggot"></div></li>
-                <li><div id="HairStrand1"><img src="../IndexImages/playing laser tag sim.png" alt="maggot"></div></li>
-                <li><div id="HairStrand1"><img src="../IndexImages/playing laser tag sim.png" alt="maggot"></div></li>
-
-            </ul>
-          </div>
-    </body>
+    <hr>
+    <p>Welcome to this website</p>
+    <p>The funds that we gather from your artworks go towards people with arched fingertips</p>
+</body>
 </html>
