--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     </header>
     <center>
-        <h3>www.2plateproductions.com</h3>
-        <img src="IndexImages/1Two Plate Productions Logo.png" alt="logo">
-        <h3>by Luca the arched fingertips, Gabriel and Kyan</h3>
+            <h3>www.2plateproductions.com</h3>
+            <img src="IndexImages/1Two Plate Productions Logo.png" alt="2plateproductions">
+            <h3>by Luca the arched fingertips, Gabriel and Kyan</h3>
     </center>
-    <hr color="green">
+
+    <hr color="737373">
     <center>
         <table>
             <th>
@@ -22,7 +23,9 @@
                 </th>
             </th>
             <th>
-                    <img src="IndexImages/archedhuman.png" alt="image please tell gabriel to add images to the drive">
+                <div id="maggot">
+                    <img src="IndexImages/Art Gallery Masgot.png" alt="image please tell gabriel to add images to the drive">
+                </div>    
             </th>
             <th>
                 <ul>
@@ -32,7 +35,8 @@
                 </ul> 
             </th>
         </table>
-        
     </center>
+    <hr>
+    <p>TO FIND OUT MORE GO TO THE ABOUT PAGE</p>
 </body>
 </html>
