sequel of stuff

--- a/about/about.html
+++ b/about/about.html
@@ -6,7 +6,7 @@
     </header>
     <center>
             <h3>www.2plateproductions.com</h3>
-            <img src="IndexImages/1Two Plate Productions Logo.png" alt="2plateproductions">
+            <img src="../IndexImages/1Two Plate Productions Logo.png" alt="2plateproductions">
             <h3>by Luca the arched fingertips, Gabriel and Kyan</h3>
     </center>
 
@@ -24,7 +24,7 @@
             </th>
             <th>
                 <div id="maggot">
-                    <img src="../IndexImages/artest.png" alt="image please tell gabriel to add images to the drive">
+                    <img src="../IndexImages/tragic.png" alt="image please tell gabriel to add images to the drive">
                 </div>    
             </th>
             <th>
@@ -39,5 +39,8 @@
     <hr>
     <p>Welcome to this website</p>
     <p>The funds that we gather from your artworks go towards people with arched fingertips</p>
+    <video width="320" height="240" controls>
+        <source src="../IndexImages/" type="video/mp4">
+      </video>
 </body>
 </html>
