--- a/Forum/forumIndex.html
+++ b/Forum/forumIndex.html
@@ -1,15 +1,44 @@
 <html>
     <head>
-        <link rel="stylesheet" href="ForumStyle.css">
+        <link rel="stylesheet" href="forum.css">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     </head>
     <body>
         <center>
             <h3>www.2plateproductions.com</h3>
-            <img src="" alt="TwoPlateProductions please give me the logo">
-            <h3>by Lucanonanonanon, Gabriel and Kyan</h3>
-        </center>
+            <img src="../IndexImages/1Two Plate Productions Logo.png" alt="2plateproductions">
+            <h3>by Luca the arched fingertips, Gabriel and Kyan</h3>
+    </center>
+    <center>
+        <div class="flexbox"></div>
+        <table>
+            <th>
+                <th>
+                    <div class="Righty">
+                    <ul>
+                        <a href="About/about.html"><li>About</li></a>
+                        <br>
+                        <a href="../"><li>Gallery</li></a>
+                    </ul> 
+                    </div>
+                </th>
+            </th>
+            <th>
+                <div id="maggot">
+                    <img src="../IndexImages/playing laser tag sim.png" alt="image please tell gabriel to add images to the drive">
+                </div>    
+            </th>
+            <th>
+                <ul>
+                    <a href="Forum/forumIndex.html"><li>Forum</li></a>
+                    <br>
+                    <a href="youtube.com"><li>symmetry</li></a>
+                </ul> 
+            </th>
+        </table>
+    </center>
         <hr>
+       
         pull from js database to load catagories
         When catagory clicked user will be brought to threads page
         use js to create new element with reference to a cirtain layout
