--- a/Forum/threadviewer.html
+++ b/Forum/threadviewer.html
@@ -1,4 +1,4 @@
 <html>
     <head><meta http-equiv="Content-Type" content="text/html; charset=utf-8" /></head>
-
+    posting on thread gives thread id, username, password, message
 </html>
