--- a/Forum/forumIndex.html
+++ b/Forum/forumIndex.html
@@ -16,9 +16,9 @@
                 <th>
                     <div class="Righty">
                     <ul>
-                        <a href="About/about.html"><li>About</li></a>
+                        <a href="../about/about.html"><li>About</li></a>
                         <br>
-                        <a href="../"><li>Gallery</li></a>
+                        <a href="../Gallary/galaryIndex.html"><li>Gallery</li></a>
                     </ul> 
                     </div>
                 </th>
@@ -30,9 +30,9 @@
             </th>
             <th>
                 <ul>
-                    <a href="Forum/forumIndex.html"><li>Forum</li></a>
+                    <a href="../Forum/forumIndex.html"><li>Forum</li></a>
                     <br>
-                    <a href="youtube.com"><li>symmetry</li></a>
+                    <a href="https://www.youtube.com"><li>symmetry</li></a>
                 </ul> 
             </th>
         </table>
