--- a/about/about.html
+++ b/about/about.html
@@ -16,9 +16,9 @@
             <th>
                 <th>
                     <ul>
-                        <a href="About/about.html"><li>About</li></a>
+                        <a href="../about/about.html"><li>About</li></a>
                         <br>
-                        <a href="Gallary/galaryIndex.html"><li>Gallery</li></a>
+                        <a href="../Gallary/galaryIndex.html"><li>Gallery</li></a>
                     </ul> 
                 </th>
             </th>
@@ -29,18 +29,19 @@
             </th>
             <th>
                 <ul>
-                    <a href="Forum/forumIndex.html"><li>Forum</li></a>
+                    <a href="../Forum/forumIndex.html"><li>Forum</li></a>
                     <br>
-                    <a href="youtube.com"><li>symmetry</li></a>
+                    <a href="https://www.youtube.com"><li>symmetry</li></a>
                 </ul> 
             </th>
         </table>
     </center>
     <hr>
     <p>Welcome to this website</p>
+    <p><img src="../IndexImages/rainblin.gif" alt="raibow" width="692" height="2"></p>
     <p>The funds that we gather from your artworks go towards people with arched fingertips</p>
-    <video width="320" height="240" controls>
-        <source src="../IndexImages/" type="video/mp4">
+    <video width="640" height="480" controls>
+        <source src="../IndexImages/VID_91390215_155814_760.mp4" type="video/mp4">
       </video>
 </body>
 </html>
