--- a/Gallary/galaryIndex.html
+++ b/Gallary/galaryIndex.html
@@ -4,42 +4,47 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     </head>
     <body>
-        <center>
-            <h3>www.2plateproductions.com</h3>
-            <img src="IndexImages/1Two Plate Productions Logo.png" alt="2plateproductions">
-            <h3>by Luca the arched fingertips, Gabriel and Kyan</h3>
-    </center>
-    <center>
-        <table>
-            <th>
-                <th>
-                    <ul>
-                        <a href="About/about.html"><li>About</li></a>
-                        <br>
-                        <a href="../IndexImages/"><li>Gallery</li></a>
-                    </ul> 
-                </th>
-            </th>
-            <th>
-                <div id="maggot">
-                    <img src="../IndexImages/artest.png" alt="image please tell gabriel to add images to the drive">
-                </div>    
-            </th>
-            <th>
-                <ul>
-                    <a href="Forum/forumIndex.html"><li>Forum</li></a>
-                    <br>
-                    <a href="youtube.com"><li>symmetry</li></a>
-                </ul> 
-            </th>
-        </table>
-    </center>
+        <div class="logo">
+            <center>
+                <h3>www.2plateproductions.com</h3>
+                <img src="../IndexImages/1Two Plate Productions Logo.png" alt="2plateproductions">
+                <h3>by Luca the arched fingertips, Gabriel and Kyan</h3>
+        </center>
+        </div>
+        <br>
+        <div class="pages">
+            <center>
+                <table>
+                    <th>
+                        <th>
+                            <ul>
+                                <a href="../about/about.html"><li>About</li></a>
+                                <br>
+                                <a href="../Gallary/galaryIndex.html"><li>Gallery</li></a>
+                            </ul> 
+                        </th>
+                    </th>
+                    <th>
+                        <div id="maggot">
+                            <img src="../IndexImages/artest.png" alt="image please tell gabriel to add images to the drive">
+                        </div>    
+                    </th>
+                    <th>
+                        <ul>
+                            <a href="../Forum/forumIndex.html"><li>Forum</li></a>
+                            <br>
+                            <a href="https://www.youtube.com"><li>symmetry</li></a>
+                        </ul> 
+                    </th>
+                </table>
+            </center>
+        </div>
         <hr>
         <div class="luca">
             <ul>
                 <li><div id="HairStrand1"><img src="../IndexImages/playing laser tag sim.png" alt="maggot"></div></li>
                 <li><div class="caption">I AM IN THE COMEDY REALM</div></li>
-                <li><div id="HairStrand1"><img src="../IndexImages/playing laser tag sim.png" alt="maggot"></div></li>
+                <li><div id="HairStrand1"><img src="../IndexImages/rory.PNG" alt="maggot"></div></li>
                 <li><div id="HairStrand1"><img src="../IndexImages/playing laser tag sim.png" alt="maggot"></div></li>
                 <li><div id="HairStrand1"><img src="../IndexImages/playing laser tag sim.png" alt="maggot"></div></li>
 
