--- a/Forum/forumIndex.html
+++ b/Forum/forumIndex.html
@@ -4,39 +4,45 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     </head>
     <body>
+        <div class="logo">
         <center>
             <h3>www.2plateproductions.com</h3>
             <img src="../IndexImages/1Two Plate Productions Logo.png" alt="2plateproductions">
             <h3>by Luca the arched fingertips, Gabriel and Kyan</h3>
+            </center></div>
     </center>
-    <center>
-        <div class="flexbox"></div>
-        <table>
-            <th>
+    <br>
+    <div class="pages">
+        <center>
+            <div class="flexbox"></div>
+            <table>
                 <th>
-                    <div class="Righty">
-                    <ul>
-                        <a href="../about/about.html"><li>About</li></a>
-                        <br>
-                        <a href="../Gallary/galaryIndex.html"><li>Gallery</li></a>
-                    </ul> 
-                    </div>
+                    <th>
+                        <div class="Righty">
+                        <ul>
+                            <a href="../about/about.html"><li>About</li></a>
+                            <br>
+                            <a href="../Gallary/galaryIndex.html"><li>Gallery</li></a>
+                        </ul> 
+                        </div>
+                    </th>
                 </th>
-            </th>
-            <th>
-                <div id="maggot">
-                    <img src="../IndexImages/playing laser tag sim.png" alt="image please tell gabriel to add images to the drive">
-                </div>    
-            </th>
-            <th>
-                <ul>
-                    <a href="../Forum/forumIndex.html"><li>Forum</li></a>
-                    <br>
-                    <a href="https://www.youtube.com"><li>symmetry</li></a>
-                </ul> 
-            </th>
-        </table>
-    </center>
+                <th>
+                    <div id="maggot">
+                        <img src="../IndexImages/unknown.png" alt="image please tell gabriel to add images to the drive">
+                    </div>    
+                </th>
+                <th>
+                    <ul>
+                        <a href="../index.html"><li>Home</li></a>
+                        <br>
+                        <a href="https://www.youtube.com"><li>symmetry</li></a>
+                    </ul> 
+                </th>
+            </table>
+        </center>
+    </div>
+    
         <hr>
        
         pull from js database to load catagories
