--- a/Gallary/galaryIndex.html
+++ b/Gallary/galaryIndex.html
@@ -20,7 +20,7 @@
                             <ul>
                                 <a href="../about/about.html"><li>About</li></a>
                                 <br>
-                                <a href="../Gallary/galaryIndex.html"><li>Gallery</li></a>
+                                <a href="../index.html"><li>Home</li></a>
                             </ul> 
                         </th>
                     </th>
@@ -45,8 +45,20 @@
                 <li><div id="HairStrand1"><img src="../IndexImages/playing laser tag sim.png" alt="maggot"></div></li>
                 <li><div class="caption">I AM IN THE COMEDY REALM</div></li>
                 <li><div id="HairStrand1"><img src="../IndexImages/rory.PNG" alt="maggot"></div></li>
-                <li><div id="HairStrand1"><img src="../IndexImages/playing laser tag sim.png" alt="maggot"></div></li>
-                <li><div id="HairStrand1"><img src="../IndexImages/playing laser tag sim.png" alt="maggot"></div></li>
+                <li><div class="caption">In memory of</div></li>
+                <li><div id="HairStrand1"><img src="../Gallary/CH_1.jpg" alt="maggot"></div></li>
+                <li><div class="caption">One of us</div></li>
+                <div class="smaller">
+                <li><div id="HairStrand1"><img src="../Gallary/IMG_6453.jpg" alt="maggot"></div></li>
+                <li><div class="caption">Damn Daniel</div></li>
+                <li><div id="HairStrand1"><img src="../Gallary/hari.jpg" alt="maggot"></div></li>
+                <li><div class="caption">luca's hair</div></li>
+                <li><div id="HairStrand1"><img src="../Gallary/burnt.jpg" alt="maggot"></div></li>
+                <li><div class="caption">luca's hair but burnt</div></li>
+                <li><div id="HairStrand1"><img src="../Gallary/face.jpg" alt="maggot"></div></li>
+                <li><div class="caption">happy face</div></li>
+            </div>
+            
 
             </ul>
           </div>
