--- a/about/about.html
+++ b/about/about.html
@@ -4,19 +4,22 @@
         <link rel="stylesheet" href="about.css">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     </header>
-    <center>
+    <div class="logo">
+        <center>
             <h3>www.2plateproductions.com</h3>
             <img src="../IndexImages/1Two Plate Productions Logo.png" alt="2plateproductions">
             <h3>by Luca the arched fingertips, Gabriel and Kyan</h3>
     </center>
+    </div>
 
     <hr color="737373">
+    <div class="pages">
     <center>
         <table>
             <th>
                 <th>
                     <ul>
-                        <a href="../about/about.html"><li>About</li></a>
+                        <a href="../index.html"><li>Home</li></a>
                         <br>
                         <a href="../Gallary/galaryIndex.html"><li>Gallery</li></a>
                     </ul> 
@@ -36,6 +39,7 @@
             </th>
         </table>
     </center>
+</div>
     <hr>
     <p>Welcome to this website</p>
     <p><img src="../IndexImages/rainblin.gif" alt="raibow" width="692" height="2"></p>
