--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
         <link rel="stylesheet" href="index.css">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     </header>
-    <center>
-            <h3>www.2plateproductions.com</h3>
-            <img src="IndexImages/1Two Plate Productions Logo.png" alt="2plateproductions">
-            <h3>by Luca the arched fingertips, Gabriel and Kyan</h3>
-    </center>
+    <div class="logo">  
+        <center>
+        <h3>www.2plateproductions.com</h3>
+        <img src="IndexImages/1Two Plate Productions Logo.png" alt="2plateproductions">
+        <h3>by Luca the arched fingertips, Gabriel and Kyan</h3>
+</center>
+</div>
 
     <hr color="737373">
-    <center>
+    <div class="pages">
+        <center>
         <table>
             <th>
                 <th>
@@ -31,12 +34,15 @@
                 <ul>
                     <a href="Forum/forumIndex.html"><li>Forum</li></a>
                     <br>
-                    <a href="youtube.com"><li>symmetry</li></a>
+                    <a href="https://www.youtube.com"><li>symmetry</li></a>
                 </ul> 
             </th>
         </table>
     </center>
+</div>
     <hr>
+    <p>Welcome to this website</p>
+    <p><img src="IndexImages/rainblin.gif" alt="raibow" width="692" height="2"></p>
     <p>TO FIND OUT MORE GO TO THE ABOUT PAGE</p>
 </body>
 </html>
