more stuff but it's the episode after the sequel

--- a/Forum/forumIndex.html
+++ b/Forum/forumIndex.html
@@ -20,7 +20,7 @@
                     <th>
                         <div class="Righty">
                         <ul>
-                            <a href="../about/about.html"><li>About</li></a>
+                            <a href="../about/about.html"><li>About Gallery</li></a>
                             <br>
                             <a href="../Gallary/galaryIndex.html"><li>Gallery</li></a>
                         </ul> 
@@ -36,7 +36,7 @@
                     <ul>
                         <a href="../index.html"><li>Home</li></a>
                         <br>
-                        <a href="https://www.youtube.com"><li>symmetry</li></a>
+                        <a href="../IndexImages/PhotoGrid_Plus_1637928576976.jpg"><li>About Forum</li></a>
                     </ul> 
                 </th>
             </table>
