--- a/Gallary/galaryIndex.html
+++ b/Gallary/galaryIndex.html
@@ -18,7 +18,7 @@
                     <th>
                         <th>
                             <ul>
-                                <a href="../about/about.html"><li>About</li></a>
+                                <a href="../about/about.html"><li>About Forum</li></a>
                                 <br>
                                 <a href="../index.html"><li>Home</li></a>
                             </ul> 
@@ -33,7 +33,7 @@
                         <ul>
                             <a href="../Forum/forumIndex.html"><li>Forum</li></a>
                             <br>
-                            <a href="https://www.youtube.com"><li>symmetry</li></a>
+                            <a href="../IndexImages/PhotoGrid_Plus_1637928576976.jpg"><li>About Forum</li></a>
                         </ul> 
                     </th>
                 </table>
@@ -43,7 +43,7 @@
         <div class="luca">
             <ul>
                 <li><div id="HairStrand1"><img src="../IndexImages/playing laser tag sim.png" alt="maggot"></div></li>
-                <li><div class="caption">I AM IN THE COMEDY REALM</div></li>
+                <li><div class="caption">Loading into the Comedy Realm</div></li>
                 <li><div id="HairStrand1"><img src="../IndexImages/rory.PNG" alt="maggot"></div></li>
                 <li><div class="caption">In memory of</div></li>
                 <li><div id="HairStrand1"><img src="../Gallary/CH_1.jpg" alt="maggot"></div></li>
