--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <th>
                 <th>
                     <ul>
-                        <a href="About/about.html"><li>About</li></a>
+                        <a href="About/about.html"><li>About Gallery</li></a>
                         <br>
                         <a href="Gallary/galaryIndex.html"><li>Gallery</li></a>
                     </ul> 
@@ -34,7 +34,7 @@
                 <ul>
                     <a href="Forum/forumIndex.html"><li>Forum</li></a>
                     <br>
-                    <a href="https://www.youtube.com"><li>symmetry</li></a>
+                    <a href="IndexImages/PhotoGrid_Plus_1637928576976.jpg"><li>About Forum</li></a>
                 </ul> 
             </th>
         </table>
@@ -44,5 +44,8 @@
     <p>Welcome to this website</p>
     <p><img src="IndexImages/rainblin.gif" alt="raibow" width="692" height="2"></p>
     <p>TO FIND OUT MORE GO TO THE ABOUT PAGE</p>
+    <p>SPECIFICALLY ABOUT GALLERY AND NOT ABOUT FORUM</p>
+    <p>UNLESS YOU ARE IN A PONDEROUS STATE</p>
+    <div id="warning"><p><b>WARNING: Once you begin to ponder the forum, there's no going back<b></p></div>
 </body>
 </html>
