--- a/about/about.html
+++ b/about/about.html
@@ -19,7 +19,7 @@
             <th>
                 <th>
                     <ul>
-                        <a href="../index.html"><li>Home</li></a>
+                        <a href="../index.html"><li>Back Home</li></a>
                         <br>
                         <a href="../Gallary/galaryIndex.html"><li>Gallery</li></a>
                     </ul> 
@@ -34,15 +34,15 @@
                 <ul>
                     <a href="../Forum/forumIndex.html"><li>Forum</li></a>
                     <br>
-                    <a href="https://www.youtube.com"><li>symmetry</li></a>
+                    <a href="../IndexImages/PhotoGrid_Plus_1637928576976.jpg"><li>About Forum</li></a>
                 </ul> 
             </th>
         </table>
     </center>
 </div>
     <hr>
-    <p>Welcome to this website</p>
-    <p><img src="../IndexImages/rainblin.gif" alt="raibow" width="692" height="2"></p>
+    <p>About Gallery</p>
+    <p><img src="../IndexImages/rainblin.gif" alt="raibow" width="400" height="2"></p>
     <p>The funds that we gather from your artworks go towards people with arched fingertips</p>
     <video width="640" height="480" controls>
         <source src="../IndexImages/VID_91390215_155814_760.mp4" type="video/mp4">
