--- a/Forum/signup.html
+++ b/Forum/signup.html
@@ -1,14 +1,31 @@
 <html>
-    <head><meta http-equiv="Content-Type" content="text/html; charset=utf-8" /></head>
-    Keep name shorter than 17 characters, it may not contain special characters. <br>
-    <label id = "okayquestionmark" style = "color:rgb(168, 9, 9)">Please enter a username for it to be checked for originality</label><br>
-        Username:<input type="text" id="username" maxlength = "16" onchange = "check()"></input><br>
-        <!--<button id="checktemp" onclick = "check()">check</button><br>-->
-        Password:<input type="password" id="password" maxlength = "512"></input><br>
-        <br>Your Account will only be created if it has a unique username<br>
-        <button id="send" onclick = "sendform()">Submit </button><br>
-        <label id = "formsubmitted" style = "color:rgb(168, 9, 9)">After Submitting please wait</label>
-        
+    <head><meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+      <link rel="stylesheet" href="signup.css">
+    </head>
+    <body>
+      <div class="logo">  
+        <center>
+        <h3>www.2plateproductions.com</h3>
+        <img src="../IndexImages/1Two Plate Productions Logo.png" alt="2plateproductions">
+        <h3>by Luca the arched fingertips, Gabriel and Kyan</h3>
+</center>
+</div>
+<br>
+<br>
+<div class="sign">      <center>      Keep name shorter than 17 characters, it may not contain special characters. <br>
+  <label id = "okayquestionmark" style = "color:rgb(168, 9, 9)">Please enter a username for it to be checked for originality</label><br>
+      Username:<input type="text" id="username" maxlength = "16" onchange = "check()"></input><br>
+      <!--<button id="checktemp" onclick = "check()">check</button><br>-->
+      Password:<input type="password" id="password" maxlength = "512"></input><br>
+      <br>Your Account will only be created if it has a unique username<br>
+      <button id="send" onclick = "sendform()">Submit </button><br>
+      <label id = "formsubmitted" style = "color:rgb(168, 9, 9)">After Submitting please wait</label>
+      <br>
+    </center></div>
+    <center><video width="640" height="480" controls>
+      <source src="../IndexImages/namrtag.mp4" type="video/mp4">
+    </video></center>
+    </body>        
 </html>
     <!--alert before allowing to create account
     //once signed in let them know that if their request is valid it will be processed, their account should be active within the minuit assuming all is well-->
