--- a/Forum/createthread.html
+++ b/Forum/createthread.html
@@ -11,6 +11,10 @@
     </div>
     <br>
     <br>
+    <div class="flexbox">
+    <div class="one">
+        <img src="../IndexImages/rory.PNG" alt="">
+    </div>
     <div class="sign"> 
         <center>
             Keep name shorter than 17 characters, it may not contain special characters. <br>
@@ -23,8 +27,12 @@
                 <br>The thread will only be created if it has a unique name<br><br>
                 <button id="send" onclick = "sendform()">Submit </button><br>
                 <label id = "formsubmitted" style = "color:rgb(168, 9, 9)">After Submitting please wait</label>
-                </div> 
-        </center>
+                </center>
+        </div> 
+        <div class="two">
+            <img src="../IndexImages/rory.PNG" alt="">
+        </div>
+    </div>
     </body>
 </html>
     <!--alert before allowing to create account
