--- a/Forum/createthread.html
+++ b/Forum/createthread.html
@@ -13,7 +13,7 @@
     <br>
     <div class="flexbox">
     <div class="one">
-        <img src="../IndexImages/rory.PNG" alt="">
+        <img src="../IndexImages/one plate hovercraft ad.png" alt="">
     </div>
     <div class="sign"> 
         <center>
@@ -30,7 +30,7 @@
                 </center>
         </div> 
         <div class="two">
-            <img src="../IndexImages/rory.PNG" alt="">
+            <img src="../IndexImages/two plate hovercraft ad.png" alt="">
         </div>
     </div>
     </body>
