--- a/Gallary/galaryIndex.html
+++ b/Gallary/galaryIndex.html
@@ -7,7 +7,7 @@
         <div class="logo">
             <center>
                 <h3>www.2plateproductions.com</h3>
-                <img src="../IndexImages/1Two Plate Productions Logo.png" alt="2plateproductions">
+                <img src="../IndexImages/1TwoPlateProductionsLogo.png" alt="2plateproductions">
                 <h3>by Luca the arched fingertips, Gabriel and Kyan</h3>
         </center>
         </div>
@@ -42,7 +42,7 @@
         <hr>
         <div class="luca">
             <ul>
-                <li><div id="HairStrand1"><img src="../IndexImages/playing laser tag sim.png" alt="maggot"></div></li>
+                <li><div id="HairStrand1"><img src="../IndexImages/playinglasertagsim.png" alt="maggot"></div></li>
                 <li><div class="caption">Loading into the Comedy Realm</div></li>
                 <li><div id="HairStrand1"><img src="../IndexImages/rory.PNG" alt="maggot"></div></li>
                 <li><div class="caption">In memory of</div></li>
