--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <div class="logo">  
         <center>
         <h3>www.2plateproductions.com</h3>
-        <img src="IndexImages/1Two Plate Productions Logo.png" alt="2plateproductions">
+        <img src="IndexImages/1TwoPlateProductionsLogo.png" alt="2plateproductions">
         <h3>by Luca the arched fingertips, Gabriel and Kyan</h3>
 </center>
 </div>
@@ -27,7 +27,7 @@
             </th>
             <th>
                 <div id="maggot">
-                    <img src="IndexImages/Art Gallery Masgot.png" alt="image please tell gabriel to add images to the drive">
+                    <img src="IndexImages/ArtGalleryMasgot.png" alt="image please tell gabriel to add images to the drive">
                 </div>    
             </th>
             <th>
