--- a/Forum/createthread.html
+++ b/Forum/createthread.html
@@ -5,7 +5,7 @@
         <div class="logo">  
             <center>
             <h3>www.2plateproductions.com</h3>
-            <img src="../IndexImages/1Two Plate Productions Logo.png" alt="2plateproductions">
+            <img src="../IndexImages/1TwoPlateProductionsLogo.png" alt="2plateproductions">
             <h3>by Luca the arched fingertips, Gabriel and Kyan</h3>
     </center>
     </div>
@@ -13,7 +13,7 @@
     <br>
     <div class="flexbox">
     <div class="one">
-        <img src="../IndexImages/one plate hovercraft ad.png" alt="">
+        <img src="../IndexImages/oneplatehovercraftad.png" alt="">
     </div>
     <div class="sign"> 
         <center>
@@ -30,7 +30,7 @@
                 </center>
         </div> 
         <div class="two">
-            <img src="../IndexImages/two plate hovercraft ad.png" alt="">
+            <img src="../IndexImages/twoplatehovercraftad.png" alt="">
         </div>
     </div>
     </body>
